fix persons & auth
